--- a/rootdir/etc/init.g2.rc
+++ b/rootdir/etc/init.g2.rc
@@ -52,6 +52,9 @@ on init
     # Support legacy paths
     symlink /sdcard /mnt/sdcard
     symlink /sdcard /storage/sdcard0
+    
+    # Setup zram options
+    write /sys/block/zram0/comp_algorithm lz4
 
 on fs
     mount_all ./fstab.g2
