--- a/project.config
+++ b/project.config
@@ -3,7 +3,7 @@
 	action = rebase if necessary
 [access "refs/heads/*"]
 	create = group LG G2
-	push = group LG G2
+	push = +force group LG G2
 	label-Code-Review = -2..+2 group LG G2
 	label-Verified = -1..+1 group LG G2
 	submit = group LG G2
